spade-tests/src/snapshots/spade_tests__ast_lowering__partial_undeclared_name_2.snap
---
source: spade-tests/src/ast_lowering.rs
---
mod a {
    mod c {}
}
use a::b::c;


error: Use of undeclared name a::b::c
  ┌─ testinput:4:8
  │
4 │ use a::b::c;
  │        ^ Undeclared name
